[package]
name = "ancs"
version = "0.2.0"
authors = ["Ian Armour <ianmarmour@gmail.com>"]
edition = "2021"
description = """
A set of types for representing Apple Notification Center Service requests and responses.
"""
readme = "README.md"
repository = "https://github.com/ianmarmour/ancs"
license = "MIT"
keywords = ["ancs", "apple", "bluetooth", "btle", "notification"]
categories = ["encoding", "network-programming"]

[lib]
path = "src/lib.rs"

[dependencies]
bitflags = "2"
nom = "7"
uuid = "1"
